fix overflow problem

--- a/src/components/Card/BlogCard.css
+++ b/src/components/Card/BlogCard.css
@@ -1,7 +1,7 @@
 
 /* BlogCard.css */
 .blog-card {
-  width: 400px;
+  /* width: 400px; */
   background:#239E36A1;
   padding: 20px;
   border: 1px solid #ddd;
